Fix image not showing in Hero

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -39,7 +39,7 @@
     margin: auto;
   }
 
-  svg {
+  img {
     margin: 64px auto 32px;
   }
 
